builder: Improve allowed_scms documentation in the config file
The config file tries to explain to the admin how to specify
allowed_scms, but one option (source_cmd) was missing.

This just reuses the wording of the docstring from the function parsing
this option, providing a complete documentation to admins when they read
the config file.

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -41,11 +41,21 @@ server=http://hub.example.com/kojihub
 ; The URL for the file access
 topurl=http://hub.example.com/kojifiles
 
-; A space-separated list of hostname:repository[:use_common] tuples that kojid is authorized to checkout from (no quotes).
-; Wildcards (as supported by fnmatch) are allowed.
-; If use_common is specified and is one of "false", "no", "off", or "0" (without quotes), then kojid will not attempt to checkout
-; a common/ dir when checking out sources from the source control system.  Otherwise, it will attempt to checkout a common/
-; dir, and will raise an exception if it cannot.
+; A space-separated list of tuples from which kojid is allowed to checkout.
+; The format of those tuples is:
+;
+;     host:repository[:use_common[:source_cmd]]
+;
+; Incorrectly-formatted tuples will be ignored.
+;
+; If use_common is not present, kojid will attempt to checkout a common/
+; directory from the repository.  If use_common is set to no, off, false, or 0,
+; it will not attempt to checkout a common/ directory.
+;
+; source_cmd is a shell command (args separated with commas instead of spaces)
+; to run before building the srpm. It is generally used to retrieve source
+; files from a remote location.  If no source_cmd is specified, "make sources"
+; is run by default.
 allowed_scms=scm.example.com:/cvs/example git.example.org:/example svn.example.org:/users/*:no
 
 ; The mail host to use for sending email notifications
