update httpd access directives

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -7,8 +7,11 @@ Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
 <Directory "/usr/share/koji-hub">
     Options ExecCGI
     SetHandler wsgi-script
-    Order allow,deny
-    Allow from all
+    Require all granted
+    #If you have httpd <= 2.2, you'll want the following two lines instead
+    #of the one above:
+    #Order allow,deny
+    #Allow from all
 </Directory>
 
 # Support for mod_python is DEPRECATED. If you still need mod_python support,
@@ -28,8 +31,11 @@ Alias /kojifiles "/mnt/koji/"
 <Directory "/mnt/koji">
     Options Indexes
     AllowOverride None
-    Order allow,deny
-    Allow from all
+    Require all granted
+    #If you have httpd <= 2.2, you'll want the following two lines instead
+    #of the one above:
+    #Order allow,deny
+    #Allow from all
 </Directory>
 
 # uncomment this to enable authentication via SSL client certificates
