files: Tell Apache to let clients follow symlinks
This is necessary for builds to succeed, as they will try to access URLs
like this:

  http://koji.fr/kojifiles/repos/$tag/$repoid/$arch/toplink/packages/...

And on the filesystem, that "toplink" folder is in fact a symlink to the
kojifiles root.

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -29,7 +29,7 @@ Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
 Alias /kojifiles "/mnt/koji/"
 
 <Directory "/mnt/koji">
-    Options Indexes
+    Options Indexes SymLinksIfOwnerMatch
     AllowOverride None
     Require all granted
     #If you have httpd <= 2.2, you'll want the following two lines instead
