add a note about FollowSymLinks in hub httpd conf

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -30,6 +30,9 @@ Alias /kojifiles "/mnt/koji/"
 
 <Directory "/mnt/koji">
     Options Indexes SymLinksIfOwnerMatch
+    #If your top /mnt/koji directory is not owned by the httpd user, then
+    #you will need to follow all symlinks instead, e.g.
+    #Options Indexes FollowSymLinks
     AllowOverride None
     Require all granted
     #If you have httpd <= 2.2, you'll want the following two lines instead
