--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -41,6 +41,9 @@ server=http://hub.example.com/kojihub
 ; The URL for the file access
 topurl=http://hub.example.com/kojifiles
 
+; use createrepo_c rather than createrepo
+; createrepo_c=False
+
 ; A space-separated list of tuples from which kojid is allowed to checkout.
 ; The format of those tuples is:
 ;
