signed-repo kojiweb tweaks

--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -29,3 +29,8 @@ LibPath = /usr/share/koji-web/lib
 # If False, then the footer will be included as another Kid Template.
 # Defaults to True
 LiteralFooter = True
+
+# Uncommenting this will show python tracebacks in the webUI, but they are the
+# same as what you will see in apache's error_log.
+# Not for production use
+#PythonDebug = True
