signed-repo kojiweb tweaks

--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -42,3 +42,8 @@ LiteralFooter = True
 # ToplevelTasks = 
 # Tasks that can have children
 # ParentTasks = 
+
+# Uncommenting this will show python tracebacks in the webUI, but they are the
+# same as what you will see in apache's error_log.
+# Not for production use
+# PythonDebug = True
