--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -42,7 +42,7 @@ server=http://hub.example.com/kojihub
 topurl=http://hub.example.com/kojifiles
 
 ; use createrepo_c rather than createrepo
-; createrepo_c=False
+; use_createrepo_c=False
 
 ; A space-separated list of tuples from which kojid is allowed to checkout.
 ; The format of those tuples is:
