Configure httpd's access control automatically with IfVersion
See documentation for upgrading to 2.4:
https://httpd.apache.org/docs/2.4/upgrading.html#access

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -7,11 +7,13 @@ Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
 <Directory "/usr/share/koji-hub">
     Options ExecCGI
     SetHandler wsgi-script
-    Require all granted
-    #If you have httpd <= 2.2, you'll want the following two lines instead
-    #of the one above:
-    #Order allow,deny
-    #Allow from all
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
 </Directory>
 
 # Support for mod_python is DEPRECATED. If you still need mod_python support,
@@ -34,11 +36,13 @@ Alias /kojifiles "/mnt/koji/"
     #you will need to follow all symlinks instead, e.g.
     #Options Indexes FollowSymLinks
     AllowOverride None
-    Require all granted
-    #If you have httpd <= 2.2, you'll want the following two lines instead
-    #of the one above:
-    #Order allow,deny
-    #Allow from all
+    <IfVersion < 2.4>
+        Order allow,deny
+        Allow from all
+    </IfVersion>
+    <IfVersion >= 2.4>
+        Require all granted
+    </IfVersion>
 </Directory>
 
 # uncomment this to enable authentication via SSL client certificates
