Install both hub and builder plugins.
This is a different take at https://pagure.io/koji/pull-request/45

Instead of installing just the runroot builder plugin explicitly, here we
separate the plugins out into hub and builder plugins explicitly and install
each type in turn.

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,8 +1,12 @@
 PYTHON=python
 PLUGINDIR = /usr/lib/koji-hub-plugins
-FILES = $(wildcard *.py)
+BUILDERPLUGINDIR = /usr/lib/koji-builder-plugins
+FILES = $(wildcard hub/*.py)
+BUILDERFILES = $(wildcard builder/*.py)
 CONFDIR = /etc/koji-hub/plugins
-CONFFILES = $(wildcard *.conf)
+BUILDERCONFDIR = /etc/kojid
+CONFFILES = $(wildcard hub/*.conf)
+BUILDERCONFFILES = $(wildcard builder/*.conf)
 
 _default:
 	@echo "nothing to make.  try make install"
@@ -18,7 +22,12 @@ install:
 	fi
 
 	mkdir -p $(DESTDIR)/$(PLUGINDIR)
+	mkdir -p $(DESTDIR)/$(BUILDERPLUGINDIR)
 	install -p -m 644 $(FILES) $(DESTDIR)/$(PLUGINDIR)
+	install -p -m 644 $(BUILDERFILES) $(DESTDIR)/$(BUILDERPLUGINDIR)
 	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(PLUGINDIR)', 1, '$(PLUGINDIR)', 1)"
+	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(BUILDERPLUGINDIR)', 1, '$(BUILDERPLUGINDIR)', 1)"
 	mkdir -p $(DESTDIR)/$(CONFDIR)
+	mkdir -p $(DESTDIR)/$(BUILDERCONFDIR)
 	install -p -m 644 $(CONFFILES) $(DESTDIR)/$(CONFDIR)
+	install -p -m 644 $(BUILDERCONFFILES) $(DESTDIR)/$(BUILDERCONFDIR)
