--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,11 +1,11 @@
 PYTHON=python
-PLUGINDIR = /usr/lib/koji-hub-plugins
+HUBPLUGINDIR = /usr/lib/koji-hub-plugins
 BUILDERPLUGINDIR = /usr/lib/koji-builder-plugins
-FILES = $(wildcard hub/*.py)
+HUBFILES = $(wildcard hub/*.py)
 BUILDERFILES = $(wildcard builder/*.py)
-CONFDIR = /etc/koji-hub/plugins
+HUBCONFDIR = /etc/koji-hub/plugins
 BUILDERCONFDIR = /etc/kojid
-CONFFILES = $(wildcard hub/*.conf)
+HUBCONFFILES = $(wildcard hub/*.conf)
 BUILDERCONFFILES = $(wildcard builder/*.conf)
 
 _default:
@@ -21,13 +21,13 @@ install:
 		exit 1; \
 	fi
 
-	mkdir -p $(DESTDIR)/$(PLUGINDIR)
+	mkdir -p $(DESTDIR)/$(HUBPLUGINDIR)
 	mkdir -p $(DESTDIR)/$(BUILDERPLUGINDIR)
-	install -p -m 644 $(FILES) $(DESTDIR)/$(PLUGINDIR)
+	install -p -m 644 $(HUBFILES) $(DESTDIR)/$(HUBPLUGINDIR)
 	install -p -m 644 $(BUILDERFILES) $(DESTDIR)/$(BUILDERPLUGINDIR)
-	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(PLUGINDIR)', 1, '$(PLUGINDIR)', 1)"
+	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(HUBPLUGINDIR)', 1, '$(HUBPLUGINDIR)', 1)"
 	$(PYTHON) -c "import compileall; compileall.compile_dir('$(DESTDIR)/$(BUILDERPLUGINDIR)', 1, '$(BUILDERPLUGINDIR)', 1)"
-	mkdir -p $(DESTDIR)/$(CONFDIR)
+	mkdir -p $(DESTDIR)/$(HUBCONFDIR)
 	mkdir -p $(DESTDIR)/$(BUILDERCONFDIR)
-	install -p -m 644 $(CONFFILES) $(DESTDIR)/$(CONFDIR)
+	install -p -m 644 $(HUBCONFFILES) $(DESTDIR)/$(HUBCONFDIR)
 	install -p -m 644 $(BUILDERCONFFILES) $(DESTDIR)/$(BUILDERCONFDIR)
