--- a/docs/Makefile
+++ b/docs/Makefile
@@ -10,6 +10,7 @@ BUILDDIR      = build
 # User-friendly check for sphinx-build
 ifeq ($(shell which $(SPHINXBUILD) >/dev/null 2>&1; echo $$?), 1)
 $(error The '$(SPHINXBUILD)' command was not found. Make sure you have Sphinx installed, then set the SPHINXBUILD environment variable to point to the full path of the '$(SPHINXBUILD)' executable. Alternatively you can add the directory with the executable to your PATH. If you don't have Sphinx installed, grab it from http://sphinx-doc.org/)
+#' <- avoids bad syntax highlighting
 endif
 
 # Internal variables.
@@ -48,6 +49,11 @@ help:
 
 clean:
 	rm -rf $(BUILDDIR)/*
+
+# nothing to install for docs, we package from this dir
+install:
+	@echo "(no install for docs dir)"
+
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
