--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -28,3 +28,8 @@ LibPath = /usr/share/koji-web/lib
 # If False, then the footer will be included as another Kid Template.
 # Defaults to True
 LiteralFooter = True
+
+# This can be the numeric ID of a user that you want to hide from tasks listed
+# on the front page. You might want to, for instance, hide the activity of an
+# account used for continuous integration.
+#HiddenUser = 5372
