Make HiddenUser into HiddenUsers.
At @mikeb's suggestion in the code review, this makes HiddenUsers plural.

This makes the whole changeset a little more invasive than it was before, so please review carefully.

--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -29,7 +29,7 @@ LibPath = /usr/share/koji-web/lib
 # Defaults to True
 LiteralFooter = True
 
-# This can be the numeric ID of a user that you want to hide from tasks listed
-# on the front page. You might want to, for instance, hide the activity of an
-# account used for continuous integration.
-#HiddenUser = 5372
+# This can be a comma-delimited list of the numeric IDs of users that you want
+# to hide from tasks listed on the front page. You might want to, for instance,
+# hide the activity of an account used for continuous integration.
+#HiddenUsers = 5372,1234
