--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -88,4 +88,4 @@ from_addr=Koji Build System <buildsys@example.com>
 ;serverca = /etc/kojid/serverca.crt
 
 ;if set to True, failing subtask will not automatically cancel other siblings
-;build_arch_can_fail = True
+;build_arch_can_fail = False
