work around in OpenSSL issue on the hub

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -7,6 +7,9 @@ Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
 <Directory "/usr/share/koji-hub">
     Options ExecCGI
     SetHandler wsgi-script
+    WSGIApplicationGroup %{GLOBAL}
+    # ^ works around a hub issue with OpenSSL
+    # see: https://cryptography.io/en/latest/faq/#starting-cryptography-using-mod-wsgi-produces-an-internalerror-during-a-call-in-register-osrandom-engine
     <IfVersion < 2.4>
         Order allow,deny
         Allow from all
