--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -5,6 +5,9 @@ Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
 <Directory "/usr/share/koji-web/scripts/">
     Options ExecCGI
     SetHandler wsgi-script
+    WSGIApplicationGroup %{GLOBAL}
+    # ^ works around an OpenSSL issue
+    # see: https://cryptography.io/en/latest/faq/#starting-cryptography-using-mod-wsgi-produces-an-internalerror-during-a-call-in-register-osrandom-engine
     <IfVersion < 2.4>
         Order allow,deny
         Allow from all
