Allow principal and keytab in cli config
Signed-off-by: Patrick Uiterwijk <puiterwijk@redhat.com>

--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -19,6 +19,12 @@
 ;the service name of the principal being used by the hub
 ;krbservice = host
 
+;the principal to auth as for automated clients
+;principal = client@EXAMPLE.COM
+
+;the keytab to auth as for automated clients
+;keytab = /etc/krb5.keytab
+
 ;configuration for SSL authentication
 
 ;client certificate
