Update http:// to https:// in code
Where https is working, code was updated to use it.

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -14,7 +14,7 @@ unprotected_keys =
     redhat-beta
 
 server = https://koji.fedoraproject.org/kojihub
-weburl = http://koji.fedoraproject.org/koji
+weburl = https://koji.fedoraproject.org/koji
 
 # The service name of the principal being used by the hub
 #krbservice = host
