--- a/util/koji-shadow.conf
+++ b/util/koji-shadow.conf
@@ -4,4 +4,4 @@
 [main]
 server=http://localhost/kojihub/
 krbservice=host
-remote=http://koji.fedoraproject.org/kojihub
+remote=https://koji.fedoraproject.org/kojihub
