--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -1,6 +1,6 @@
 [web]
 SiteName = koji
-#KojiTheme = mytheme
+# KojiTheme = mytheme
 
 # Key urls
 KojiHubURL = http://hub.example.com/kojihub
@@ -32,4 +32,11 @@ LiteralFooter = True
 # This can be a space-delimited list of the numeric IDs of users that you want
 # to hide from tasks listed on the front page. You might want to, for instance,
 # hide the activity of an account used for continuous integration.
-#HiddenUsers = 5372 1234
+# HiddenUsers = 5372 1234
+
+# Task types visible in pulldown menu on tasks page.
+# Tasks = build, buildSRPMFromSCM, buildArch, chainbuild, maven, buildMaven, chainmaven, wrapperRPM, winbuild, vmExec, waitrepo, tagBuild, newRepo, createrepo, buildNotification, tagNotification, dependantTask, livecd, createLiveCD, appliance, createAppliance, image, createImage, runroot, livemedia, createLiveMedia
+# Tasks that can exist without a parent
+# ToplevelTasks = build, buildNotification, chainbuild, maven, chainmaven, wrapperRPM, winbuild, newRepo, tagBuild, tagNotification, waitrepo, livecd, appliance, image, livemedia
+# Tasks that can have children
+# ParentTasks = build, chainbuild, maven, chainmaven, winbuild, newRepo, wrapperRPM, livecd, appliance, image, livemedia
