--- a/www/conf/web.conf
+++ b/www/conf/web.conf
@@ -35,8 +35,10 @@ LiteralFooter = True
 # HiddenUsers = 5372 1234
 
 # Task types visible in pulldown menu on tasks page.
-# Tasks = build, buildSRPMFromSCM, buildArch, chainbuild, maven, buildMaven, chainmaven, wrapperRPM, winbuild, vmExec, waitrepo, tagBuild, newRepo, createrepo, buildNotification, tagNotification, dependantTask, livecd, createLiveCD, appliance, createAppliance, image, createImage, runroot, livemedia, createLiveMedia
+# Tasks =
+# runroot plugin provided via main package could be listed as:
+# Tasks = runroot
 # Tasks that can exist without a parent
-# ToplevelTasks = build, buildNotification, chainbuild, maven, chainmaven, wrapperRPM, winbuild, newRepo, tagBuild, tagNotification, waitrepo, livecd, appliance, image, livemedia
+# ToplevelTasks = 
 # Tasks that can have children
-# ParentTasks = build, chainbuild, maven, chainmaven, winbuild, newRepo, wrapperRPM, livecd, appliance, image, livemedia
+# ParentTasks = 
