--- a/util/kojira.conf
+++ b/util/kojira.conf
@@ -43,8 +43,8 @@ with_src=no
 ;how soon (in seconds) to clean up expired repositories. 1 week default
 ;deleted_repo_lifetime = 604800
 
-;how soon (in seconds) to clean up signed repositories. 1 week default here too
-;signed_repo_lifetime = 604800
+;how soon (in seconds) to clean up dist repositories. 1 week default here too
+;dist_repo_lifetime = 604800
 
 ;turn on debugging statements in the log
 ;debug = false
