--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -32,3 +32,6 @@
 
 ;certificate of the CA that issued the HTTP server certificate
 ;serverca = ~/.koji/serverca.crt
+
+;enabled plugins for CLI, runroot and save_failed_tree are available
+;plugins =
