--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,26 @@
+#
+# python compilation artifacts
 *.pyc
 *.pyo
-tests/test.py
-.coverage
-docs/build/
 cli/kojic
-htmlcov
+builder/kojidc
+#
+# coverage artifacts
+.coverage
+htmlcov/
+*,cover
+#
+# build artifacts
+koji-[0-9]*.tar.bz2
+koji-[0-9]*.src.rpm
+koji-[0-9]*[0-9]/
+noarch/
+docs/build/
+#
+# misc
+*.swp
 .idea
 .DS_STORE
 .vagrant
+.gitreview
+devtools/*.conf
