expose graceful reload in kojid service config and init script

--- a/builder/kojid.service
+++ b/builder/kojid.service
@@ -9,6 +9,7 @@ ExecStart=/usr/sbin/kojid \
        --fg \
        --force-lock \
        --verbose
+ExecReload=/bin/kill -USR1 $MAINPID
 
 [Install]
 WantedBy=multi-user.target
