drop old ssl support + compatrequests
Koji now uses ssl via python-requests

 - use_old_ssl option is removed
 - koji.ssl library removed
 - compatrequests dropped

Related: https://pagure.io/koji/issue/467

--- a/koji/Makefile
+++ b/koji/Makefile
@@ -8,7 +8,7 @@ ifeq ($(PYTHON), python3)
 else
     PYFILES = $(wildcard *.py)
     PYSCRIPTS = context.py
-    SUBDIRS = ssl
+    SUBDIRS =
 endif
 PYVER := $(shell $(PYTHON) -c 'import sys; print("%.3s" % (sys.version))')
 PYSYSDIR := $(shell $(PYTHON) -c 'import sys; print(sys.prefix)')
