add krb_canon_host example in koji.conf

--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -25,6 +25,10 @@
 ;the keytab to auth as for automated clients
 ;keytab = /etc/krb5.keytab
 
+;enable to lookup dns canonical hostname for krb auth
+;krb_canon_host = no
+
+
 ;configuration for SSL authentication
 
 ;client certificate
