Add smtp authentication support

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -86,6 +86,10 @@ allowed_scms=scm.example.com:/cvs/example git.example.org:/example svn.example.o
 ; The mail host to use for sending email notifications
 smtphost=example.com
 
+; SMTP user and pass (uncomment and fill in if your smtp server requires authentication)
+;smtp_user=user@example.com
+;smtp_pass=CHANGEME
+
 ; The From address used when sending email notifications
 from_addr=Koji Build System <buildsys@example.com>
 
