blacklist tags for kojira
Fixes: https://pagure.io/koji/issue/694

(adjusted for conflicts with PR#797 -mikem)

--- a/util/kojira.conf
+++ b/util/kojira.conf
@@ -48,3 +48,6 @@ with_src=no
 
 ;turn on debugging statements in the log
 ;debug = false
+
+; ignored repositories according to glob. Multiple masks separated by space.
+; ignore_tags =
