Add smtp authentication support to koji-gc

--- a/util/koji-gc.conf
+++ b/util/koji-gc.conf
@@ -26,6 +26,10 @@ weburl = https://koji.fedoraproject.org/koji
 # when creating email notifications
 #email_domain = fedoraproject.org
 
+# SMTP user and pass (uncomment and fill in if your smtp server requires authentication)
+#smtp_user=user@example.com
+#smtp_pass=CHANGEME
+
 [prune]
 policy =
     #stuff to protect
