--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -14,6 +14,9 @@
 ; The directory root for temporary storage
 ; workdir=/tmp/koji
 
+; The temporary directory in buildroot
+; tmpdir = /tmpdir
+
 ; The directory root for mock
 ; mockdir=/var/lib/mock
 
