rename parameter/default value - tmpdir to chroot_tmpdir

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -15,7 +15,7 @@
 ; workdir=/tmp/koji
 
 ; The temporary directory in buildroot
-; tmpdir = /tmpdir
+; chroot_tmpdir = /chroot_tmpdir
 
 ; The directory root for mock
 ; mockdir=/var/lib/mock
