--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -92,3 +92,8 @@ from_addr=Koji Build System <buildsys@example.com>
 
 ;if set to True, failing subtask will not automatically cancel other siblings
 ;build_arch_can_fail = False
+
+;if set to True additional logs with timestamps will get created and uploaded
+;to hub. It could be useful for debugging purposes, but creates twice as many
+;log files
+;log_timestamps = False
