--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -38,6 +38,10 @@
 ; Timeout for build duration (24 hours)
 ; rpmbuild_timeout=86400
 
+; Install timeout(seconds) for image build
+; if it's unset, use the number in /etc/oz/oz.cfg, supported since oz-0.16.0
+; oz_install_timeout=7200
+
 ; The URL for the xmlrpc server
 server=http://hub.example.com/kojihub
 
