Web UI python3 changes
Fixes: https://pagure.io/koji/issue/890

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -2,6 +2,11 @@
 Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
 #(configuration goes in /etc/kojiweb/web.conf)
 
+# Python 3 Cheetah expectes unicode everywhere, apache's default lang is C
+# which is not sufficient to open our templates
+WSGIDaemonProcess koji lang=en_US.UTF-8
+WSGIProcessGroup koji
+
 <Directory "/usr/share/koji-web/scripts/">
     Options ExecCGI
     SetHandler wsgi-script
