use C.UTF-8 lang as default

--- a/www/conf/kojiweb.conf
+++ b/www/conf/kojiweb.conf
@@ -4,7 +4,7 @@ Alias /koji "/usr/share/koji-web/scripts/wsgi_publisher.py"
 
 # Python 3 Cheetah expectes unicode everywhere, apache's default lang is C
 # which is not sufficient to open our templates
-WSGIDaemonProcess koji lang=en_US.UTF-8
+WSGIDaemonProcess koji lang=C.UTF-8
 WSGIProcessGroup koji
 
 <Directory "/usr/share/koji-web/scripts/">
