change default value of oz_install_timeout to 0

--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -39,7 +39,8 @@
 ; rpmbuild_timeout=86400
 
 ; Install timeout(seconds) for image build
-; if it's unset, use the number in /etc/oz/oz.cfg, supported since oz-0.16.0
+; Default value is 0, which means using the number in /etc/oz/oz.cfg,
+; supported since oz-0.16.0
 ; oz_install_timeout=7200
 
 ; The URL for the xmlrpc server
