Use python2/3 instead of python in Makefile/spec
Fixes: https://pagure.io/koji/issue/1018

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -1,4 +1,3 @@
-PYTHON=python
 PYVER := $(shell $(PYTHON) -c 'import sys; print("%.3s" %(sys.version))')
 PYSYSDIR := $(shell $(PYTHON) -c 'import sys; print(sys.prefix)')
 PYLIBDIR = $(PYSYSDIR)/lib/python$(PYVER)
@@ -29,7 +28,7 @@ install:
 		echo "ERROR: A destdir is required"; \
 		exit 1; \
 	fi
-	if [ "$(PYTHON)" == "python" ] ; then \
+	if [ "$(PYTHON)" == "python2" ] ; then \
 		mkdir -p $(DESTDIR)/$(HUBPLUGINDIR); \
 		mkdir -p $(DESTDIR)/$(BUILDERPLUGINDIR); \
 		install -p -m 644 $(HUBFILES) $(DESTDIR)/$(HUBPLUGINDIR); \
