--- a/cli/koji.conf
+++ b/cli/koji.conf
@@ -39,3 +39,9 @@
 
 ;enabled plugins for CLI, runroot and save_failed_tree are available
 ;plugins =
+
+;timeout of XMLRPC requests by seconds, default: 60 * 60 * 12 = 43200
+;timeout = 43200
+
+;timeout of GSSAPI/SSL authentication by seconds, default: 60
+;auth_timeout = 60
