--- a/builder/kojid.conf
+++ b/builder/kojid.conf
@@ -50,7 +50,7 @@ server=http://hub.example.com/kojihub
 topurl=http://hub.example.com/kojifiles
 
 ; use createrepo_c rather than createrepo
-; use_createrepo_c=False
+; use_createrepo_c=True
 
 ; A space-separated list of tuples from which kojid is allowed to checkout.
 ; The format of those tuples is:
