--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -10,6 +10,9 @@ Alias /kojihub /usr/share/koji-hub/kojixmlrpc.py
     WSGIApplicationGroup %{GLOBAL}
     # ^ works around a hub issue with OpenSSL
     # see: https://cryptography.io/en/latest/faq/#starting-cryptography-using-mod-wsgi-produces-an-internalerror-during-a-call-in-register-osrandom-engine
+    WSGIScriptReloading Off
+    # ^ reloading breaks hub "firstcall" check
+    # see: https://pagure.io/koji/issue/875
     <IfVersion < 2.4>
         Order allow,deny
         Allow from all
