use GSS_NAME instead of REMOTE_USER for GSSAPI auth
jira: https://projects.engineering.redhat.com/browse/BST-475

--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -25,6 +25,8 @@ KojiDir = /mnt/koji
 ## Allowed Kerberos Realms separated by ','.
 ## Default value "*" indicates any Realm is allowed
 # AllowedKrbRealms = *
+## default realm to support multiple realms
+# DefaultRealm = EXAMPLE.COM
 
 ## end Kerberos auth configuration
 
