backwards compatibility for ProxyDNs change

--- a/hub/hub.conf
+++ b/hub/hub.conf
@@ -25,6 +25,8 @@ KojiDir = /mnt/koji
 ## Allowed Kerberos Realms separated by ','.
 ## Default value "*" indicates any Realm is allowed
 # AllowedKrbRealms = *
+## TODO: this option should be removed in future release
+# DisableGSSAPIProxyDNFallback = False
 
 ## end Kerberos auth configuration
 
