doc: GssapiLocalName should be off

--- a/hub/httpd.conf
+++ b/hub/httpd.conf
@@ -60,7 +60,7 @@ Alias /kojifiles "/mnt/koji/"
 # <Location /kojihub/ssllogin>
 #         AuthType GSSAPI
 #         GssapiSSLonly Off
-#         GssapiLocalName On
+#         GssapiLocalName Off
 #         AuthName "GSSAPI Single Sign On Login"
 #         GssapiCredStore keytab:/etc/koji.keytab
 #         Require valid-user
